--- a/blogapp/templates/includes/navbar.html
+++ b/blogapp/templates/includes/navbar.html
@@ -1,4 +1,4 @@
-<div class="bg-white d-flex align-items-center fixed-to shadow" style="min-height: 56px; z-index: 5">
+<div class="bg-white d-flex align-items-center fixed-top shadow" style="min-height: 56px; z-index: 5">
     <div class="container-fluid">
         <div class="row align-items-center">
             <!-- search -->
@@ -66,8 +66,8 @@
             <div class="col d-flex align-items-center justify-content-end">
                 <!-- avatar -->
                 <div class="align-items-center justify-content-center d-none d-xl-flex">
-                    <img src="https://source.unsplash.com/collection/happy-people" class="rounded-circle me-2"
-                        alt="avatar" style="width: 38px; height: 38px; object-fit: cover" />
+                    <img src="{{request.user.user_profile.profile_pic.url}}" class="rounded-circle me-2" alt="avatar"
+                        style="width: 38px; height: 38px; object-fit: cover" />
                     <p class="m-0">{{request.user}}</p>
                 </div>
 
