like and comment added

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,3 +16,34 @@
 .post__comment .accordion-button:not(.collapsed) {
     box-shadow: none !important;
 }
+
+button {
+    background: #fff;
+    border: unset;
+    outline: 0;
+    font-size: 18px;
+    cursor: pointer;
+    color: #65676b;
+    padding: 5px 10px;
+}
+
+button.liked {
+    color: #0571ed;
+}
+
+button.liked i {
+    animation: anim 0.5s ease-in-out;
+    -webkit-animation: anim 0.5s ease-in-out;
+}
+
+@keyframes anim {
+    100% {
+        transform: rotate(-360deg) scale(2.3);
+        -webkit-transform: rotate(-360deg) scale(2.3);
+        -moz-transform: rotate(-360deg) scale(2.3);
+        -ms-transform: rotate(-360deg) scale(2.3);
+        -o-transform: rotate(-360deg) scale(2.3);
+        filter: blur(0.5px);
+        -webkit-filter: blur(0.5px);
+    }
+}
