--- a/blogapp/templates/home.html
+++ b/blogapp/templates/home.html
@@ -4,12 +4,11 @@
 
 <!-- ================= Main ================= -->
 <div class="container-fluid">
-    <div class="row justify-content-evenly">
+    <div class="row">
         <!-- ================= Sidebar ================= -->
-        <div class="col-12 col-lg-1">
-            <div class="d-none d-lg-block h-100 fixed-top overflow-hidden scrollbar"
-                style="max-width: 360px; width: 100%; z-index: 4">
-                <ul class="navbar-nav mt-4 ms-3 d-flex flex-column pb-5 mb-5" style="padding-top: 56px">
+        <div class="col-2" style="position: relative;">
+            <div class="d-none d-lg-block h-100 scrollbar" style="position: fixed; top: 0;">
+                <ul class="navbar-nav mt-4 ms-3 d-flex flex-column mb-5" style="padding-top: 56px">
                     <!-- top -->
                     <!-- avatar -->
                     <li class="dropdown-item p-1 rounded">
@@ -93,8 +92,7 @@
         </div>
         <!-- ================= Timeline ================= -->
         <div class="col-12 col-lg-6 pb-5">
-            <div class="d-flex flex-column justify-content-center w-100 mx-auto"
-                style="padding-top: 56px; max-width: 680px">
+            <div class="d-flex flex-column justify-content-center w-100 mx-auto" style="padding-top: 56px;">
 
                 <!-- create post -->
                 <div class="bg-white p-3 mt-3 rounded border shadow">
@@ -267,33 +265,41 @@
                                     <!-- comment collapse -->
                                     <h2 class="accordion-header" id="headingTwo">
                                         <div class="
+                                        view_comment
                             accordion-button
                             collapsed
                             pointer
                             d-flex
                             justify-content-end
-                          " data-bs-toggle="collapse" data-bs-target="#collapsePost1" aria-expanded="false"
-                                            aria-controls="collapsePost1">
+                          " data-bs-toggle="collapse" data-bs-target="#collapsePost{{blog.id}}" aria-expanded="false"
+                                            aria-controls="collapsePost{{blog.id}}">
                                             <p class="m-0">2 Comments</p>
                                         </div>
                                     </h2>
                                     <hr />
                                     <!-- comment & like bar -->
                                     <div class="d-flex justify-content-around">
-                                        <div class="
-                            dropdown-item
-                            rounded
-                            d-flex
-                            justify-content-center
-                            align-items-center
-                            pointer
-                            text-muted
-                            p-1
-                          ">
-                                            <i class="fas fa-thumbs-up me-3"></i>
-                                            <p class="m-0">Like</p>
+                                        <div class="like_container">
+                                            <div class="like_btn d-flex
+                                            justify-content-center
+                                            align-items-center
+                                            like_btn{{blog.id}}" role="button">
+                                                {% if request.user in blog.liked_by.all %}
+                                                <i class="fas fa-thumbs-up me-3 text-primary"></i>
+                                                <p class="m-0">Liked</p>
+                                                <input type="hidden" name="" class="is_liked" value="True">
+                                                {% else %}
+                                                <i class="fas fa-thumbs-up me-3"></i>
+                                                <p class="m-0">Like</p>
+                                                <input type="hidden" name="" class="is_liked" value="False">
+                                                {% endif %}
+
+                                                <input type="hidden" name="" class="blog_id" value="{{blog.id}}">
+                                            </div>
+
                                         </div>
                                         <div class="
+                                        view_comment
                             dropdown-item
                             rounded
                             d-flex
@@ -302,98 +308,93 @@
                             pointer
                             text-muted
                             p-1
-                          " data-bs-toggle="collapse" data-bs-target="#collapsePost1" aria-expanded="false"
-                                            aria-controls="collapsePost1">
+                            w-50
+                          " data-bs-toggle="collapse" data-bs-target="#collapsePost{{blog.id}}" aria-expanded="false"
+                                            aria-controls="collapsePost{{blog.id}}" role="button">
                                             <i class="fas fa-comment-alt me-3"></i>
                                             <p class="m-0">Comment</p>
                                         </div>
                                     </div>
                                     <!-- comment expand -->
-                                    <div id="collapsePost1" class="accordion-collapse collapse"
+                                    <div id="collapsePost{{blog.id}}" class="accordion-collapse collapse"
                                         aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                         <hr />
-                                        <div class="accordion-body">
-                                            <!-- comment 1 -->
-                                            <div class="d-flex align-items-center my-1">
-                                                <!-- avatar -->
-                                                <img src="https://source.unsplash.com/collection/happy-people"
-                                                    alt="avatar" class="rounded-circle me-2" style="
-                                width: 38px;
-                                height: 38px;
-                                object-fit: cover;
-                              " />
-                                                <!-- comment text -->
-                                                <div class="p-3 rounded comment__input w-100">
-                                                    <!-- comment menu of author -->
-                                                    <div class="d-flex justify-content-end">
-                                                        <!-- icon -->
-                                                        <i class="fas fa-ellipsis-h text-blue pointer"
-                                                            id="post1CommentMenuButton" data-bs-toggle="dropdown"
-                                                            aria-expanded="false"></i>
-                                                        <!-- menu -->
-                                                        <ul class="dropdown-menu border-0 shadow"
-                                                            aria-labelledby="post1CommentMenuButton">
-                                                            <li class="d-flex align-items-center">
-                                                                <a class="
-                                        dropdown-item
-                                        d-flex
-                                        justify-content-around
-                                        align-items-center
-                                        fs-7
-                                      " href="#">
-                                                                    Edit Comment</a>
-                                                            </li>
-                                                            <li class="d-flex align-items-center">
-                                                                <a class="
-                                        dropdown-item
-                                        d-flex
-                                        justify-content-around
-                                        align-items-center
-                                        fs-7
-                                      " href="#">
-                                                                    Delete Comment</a>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                    <p class="fw-bold m-0">John</p>
-                                                    <p class="m-0 fs-7 bg-gray p-2 rounded">
-                                                        Lorem ipsum dolor sit amet, consectetur
-                                                        adipiscing elit.
-                                                    </p>
-                                                </div>
-                                            </div>
-                                            <!-- comment 2 -->
-                                            <div class="d-flex align-items-center my-1">
-                                                <!-- avatar -->
-                                                <img src="https://source.unsplash.com/random/2" alt="avatar"
-                                                    class="rounded-circle me-2" style="
-                                width: 38px;
-                                height: 38px;
-                                object-fit: cover;
-                              " />
-                                                <!-- comment text -->
-                                                <div class="p-3 rounded comment__input w-100">
-                                                    <p class="fw-bold m-0">Jerry</p>
-                                                    <p class="m-0 fs-7 bg-gray p-2 rounded">
-                                                        Lorem ipsum dolor sit amet, consectetur
-                                                        adipiscing elit.
-                                                    </p>
-                                                </div>
-                                            </div>
-                                            <!-- create comment -->
-                                            <form class="d-flex my-1">
-                                                <!-- avatar -->
-                                                <div>
+                                        <div class="accordion-body ">
+                                            <div class="comment_body{{blog.id}}">
+                                                {% for comment in blog.blog_comment.all %}
+                                                <!-- comment 1 -->
+                                                <div class="d-flex align-items-center my-1">
+                                                    <!-- avatar -->
                                                     <img src="https://source.unsplash.com/collection/happy-people"
                                                         alt="avatar" class="rounded-circle me-2" style="
+                                width: 38px;
+                                height: 38px;
+                                object-fit: cover;
+                              " />
+                                                    <!-- comment text -->
+                                                    <div class="p-3 rounded comment__input w-100">
+                                                        <!-- comment menu of author -->
+                                                        <div class="d-flex justify-content-end">
+                                                            <!-- icon -->
+                                                            <i class="fas fa-ellipsis-h text-blue pointer"
+                                                                id="post1CommentMenuButton" data-bs-toggle="dropdown"
+                                                                aria-expanded="false"></i>
+                                                            <!-- menu -->
+                                                            <ul class="dropdown-menu border-0 shadow"
+                                                                aria-labelledby="post1CommentMenuButton">
+                                                                <li class="d-flex align-items-center">
+                                                                    <a class="
+                                        dropdown-item
+                                        d-flex
+                                        justify-content-around
+                                        align-items-center
+                                        fs-7
+                                      " href="#">
+                                                                        Edit Comment</a>
+                                                                </li>
+                                                                <li class="d-flex align-items-center">
+                                                                    <a class="
+                                        dropdown-item
+                                        d-flex
+                                        justify-content-around
+                                        align-items-center
+                                        fs-7
+                                      " href="#">
+                                                                        Delete Comment</a>
+                                                                </li>
+                                                            </ul>
+                                                        </div>
+                                                        <p class="fw-bold m-0">John</p>
+                                                        <p class="m-0 fs-7 bg-gray p-2 rounded">
+                                                            {{comment.comment}}
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                                {% endfor %}
+                                            </div>
+
+                                            <!-- create comment -->
+                                            <form id="commentForm{{blog.id}}">
+                                                <div class="d-flex my-1 comment">
+                                                    <!-- avatar -->
+                                                    <div>
+                                                        <img src="{{comment.user.user_profile.profile_pic.url}}"
+                                                            alt="avatar" class="rounded-circle me-2" style="
                                   width: 38px;
                                   height: 38px;
                                   object-fit: cover;
                                 " />
+                                                    </div>
+                                                    {% csrf_token %}
+                                                    <!-- input -->
+                                                    <input type="hidden" name="blog_id" class="blog_id"
+                                                        value="{{blog.id}}">
+                                                    <input type="text"
+                                                        class="comment_input form-control border-0 rounded-pill bg-gray"
+                                                        placeholder="Write a comment" />
+                                                    <span class="btn btn-warning ms-2 add_comment"
+                                                        role="button">ADD</span>
                                                 </div>
-                                                <!-- input -->
-                                                <input type="text" class="form-control border-0 rounded-pill bg-gray"
-                                                    placeholder="Write a comment" />
                                             </form>
                                             <!-- end -->
                                         </div>
@@ -409,21 +410,12 @@
             </div>
         </div>
         <!-- ================= Chatbar ================= -->
-        <div class="col-12 col-lg-3">
+        <div class="col-12 col-lg-4" style="position: relative;">
             <div class="
               d-none d-lg-block
               h-100
-              fixed-top
-              end-0
-              overflow-hidden
               scrollbar
-            " style="
-              max-width: 360px;
-              width: 100%;
-              z-index: 4;
-              padding-top: 56px;
-              left: initial !important;
-            ">
+            " style="position: fixed; top: 0;">
                 <div class="p-3 mt-4">
                     <!-- sponsors -->
                     <h5 class="text-muted">Sponsored</h5>
