--- a/blogapp/templates/includes/navbar.html
+++ b/blogapp/templates/includes/navbar.html
@@ -66,7 +66,7 @@
             <div class="col d-flex align-items-center justify-content-end">
                 <!-- avatar -->
                 <div class="align-items-center justify-content-center d-none d-xl-flex">
-                    <img src="{{request.user.user_profile.profile_pic.url}}" class="rounded-circle me-2" alt="avatar"
+                    <img src="{{request.user.profile_pic.url}}" class="rounded-circle me-2" alt="avatar"
                         style="width: 38px; height: 38px; object-fit: cover" />
                     <p class="m-0">{{request.user}}</p>
                 </div>
