--- a/blogapp/templates/home.html
+++ b/blogapp/templates/home.html
@@ -195,14 +195,16 @@
                     <!-- author -->
                     <div class="d-flex justify-content-between">
                         <!-- avatar -->
-                        <div class="d-flex">
-                            <img src="{{blog.user.profile_pic.url}}" alt="avatar" class="rounded-circle me-2"
-                                style="width: 38px; height: 38px; object-fit: cover" />
-                            <div>
-                                <p class="m-0 fw-bold">{{blog.user}}</p>
-                                <span class="text-muted fs-7">{{blog.updated_at | timesince}}</span>
+                        <a href="{% url 'other-profile' blog.user.id %}">
+                            <div class="d-flex">
+                                <img src="{{blog.user.profile_pic.url}}" alt="avatar" class="rounded-circle me-2"
+                                    style="width: 38px; height: 38px; object-fit: cover" />
+                                <div>
+                                    <p class="m-0 fw-bold">{{blog.user}}</p>
+                                    <span class="text-muted fs-7">{{blog.updated_at | timesince}}</span>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                         <!-- edit -->
                         <i class="fas fa-ellipsis-h" type="button" id="post1Menu" data-bs-toggle="dropdown"
                             aria-expanded="false"></i>
@@ -410,11 +412,11 @@
             </div>
         </div>
         <!-- ================= Chatbar ================= -->
-        <div class="col-12 col-lg-4" style="position: fixed; top: 5%; right: 0;">
+        <div class="col-12 col-lg-4 scrollbar h-100" style="position: fixed; top: 5%; right: 0; z-index: 4;">
             <div class="d-none d-lg-block">
                 <!-- dp -->
                 <div class="text-center p-3 mt-4 w-100">
-                    <a href="{% url 'profile' %}">
+                    <a href="{% url 'my-profile' %}">
                         <div class="p-1">
                             <img src="{{request.user.profile_pic.url}}" alt="avatar" class="rounded-circle me-2"
                                 style="width: 200px; height: 200px; object-fit: cover; position: relative;" />
@@ -433,13 +435,15 @@
                         <h4>Followers</h4>
                     </div>
                     <div class="col-3 ">
-                        <h4>{{request.user.user_profile.get_following_count}}</h4>
+                        <h4 class="following_count">{{request.user.user_profile.get_following_count}}</h4>
                         <h4>Following</h4>
                     </div>
                 </div>
                 <div class="p-3 mt-4">
-                    <!-- sponsors -->
-                    <h5 class="text-muted">Sponsored</h5>
+                    <!-- suggestions -->
+                    <h5 class="text-muted">Suggestions</h5>
+
+                    {% for user in request.user.user_profile.get_suggestions %}
                     <!-- s 1 -->
                     <li class="dropdown-item my-2 d-flex justify-content-between">
                         <!-- img -->
@@ -449,12 +453,15 @@
                     text-decoration-none
                     link-dark
                   ">
-                            <img src="" alt="ads" style="width: 100px; height: 100px; object-fit: cover"
-                                class="rounded me-3" />
-                            <div>
-                                <p class="m-0">Lorem ipsum</p>
-                                <span class="text-muted fs-7">loremipsum.com</span>
+                            <img src="{{user.profile_pic.url}}" alt="ads"
+                                style="width: 100px; height: 100px; object-fit: cover" class="rounded me-3" />
+                            <div class="follow_container">
+                                <p class="mb-3">{{user}}</p>
+                                {% csrf_token %}
+                                <input class="follow_user_id" type="hidden" name="" value="{{user.id}}">
+                                <button class="btn btn-primary follow_btn followed{{user.id}}">Follow</button>
                             </div>
+
                         </a>
                         <!-- icon -->
                         <div class="
@@ -515,6 +522,7 @@
                             </ul>
                         </div>
                     </li>
+                    {% endfor %}
                     <!-- contacts -->
                     <hr class="m-0" />
                     <div class="my-3 d-flex justify-content-between align-items-center">
