--- a/blogapp/templates/includes/navbar.html
+++ b/blogapp/templates/includes/navbar.html
@@ -1,10 +1,10 @@
 <div class="bg-white d-flex align-items-center fixed-top shadow" style="min-height: 56px; z-index: 5">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row align-items-center">
             <!-- search -->
             <div class="col d-flex align-items-center">
                 <!-- logo -->
-                <span>Dev-Flow</span>
+                <a href="{% url 'home' %}" class="logo" style="color: rgb(10, 123, 168);">Dev-Flow</a>
                 <!-- search bar -->
                 <div class="input-group ms-2" type="button">
                     <!-- mobile -->
@@ -27,7 +27,7 @@
                     <!-- desktop -->
                     <span class="input-group-prepend d-none d-lg-block">
                         <div>
-                            <form class="d-flex" action="{% url 'search' %}">
+                            <form class="d-flex" action="{% url 'search-blogs' %}">
                                 <input name="search-input" style="min-height: 40px; min-width: 230px" type="text"
                                     class="input-group-text bg-gray border-0 rounded-pill" placeholder="Search" />
                                 <button type="submit">
@@ -46,26 +46,6 @@
                         <i class="fas fa-home text-muted fs-4"></i>
                     </button>
                 </a>
-                <!-- group -->
-                <div class="mx-4 nav__btn">
-                    <button type="button" class="btn px-4">
-                        <i type="button" class="position-relative fas fa-users text-muted fs-4">
-                            <span class="
-                      position-absolute
-                      top-0
-                      start-100
-                      translate-middle
-                      badge
-                      rounded-pill
-                      bg-danger
-                    " style="font-size: 0.5rem">
-                                1
-                                <span class="visually-hidden"></span>
-                            </span>
-                        </i>
-                    </button>
-                </div>
-
             </div>
 
             <!-- menus -->
@@ -94,12 +74,12 @@
                 <ul class="dropdown-menu border-0 shadow p-3" aria-labelledby="secondMenu" style="width: 23em">
                     <!-- avatar -->
                     <li class="dropdown-item p-1 rounded d-flex" type="button">
-                        <img src="https://source.unsplash.com/collection/happy-people" alt="avatar"
-                            class="rounded-circle me-2" style="width: 45px; height: 45px; object-fit: cover" />
-                        <div>
+                        <img src="{{request.user.profile_pic.url}}" alt="avatar" class="rounded-circle me-2"
+                            style="width: 45px; height: 45px; object-fit: cover" />
+                        <a href="{% url 'my-profile' %}">
                             <p class="m-0">{{request.user}}</p>
                             <p class="m-0 text-muted">See your profile</p>
-                        </div>
+                        </a>
                     </li>
                     <hr />
 
@@ -109,7 +89,7 @@
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a href="{% url 'signout' %}" class="d-flex text-decoration-none text-dark">
-                                    <i class="fas fa-cog bg-gray p-2 rounded-circle"></i>
+                                    <i class="fas fa-user bg-gray p-2 rounded-circle"></i>
                                     <div class="
                           ms-3
                           d-flex
