--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,10 @@ a {
     color: #000
 }
 
+.logo {
+    font-family: 'Mochiy Pop One', sans-serif;
+}
+
 
 
 
@@ -64,12 +68,12 @@ button.liked i {
 }
 
 html {
-    --scrollbarBG: #d759db;
-    --thumbBG: #7aaac2;
+    --scrollbarBG: #eee4ee;
+    --thumbBG: #87cce7;
 }
 
 .scrollbar::-webkit-scrollbar {
-    width: 11px;
+    width: 15px;
 }
 
 .scrollbar {
